# HPGCC

./: CMakeLists.txt  README.md  create_graphs.py  pyhpgcc_text.py  pyhpgcc_text_plot.py
src/: coloring.cpp  hpgcc.h  hpgcc.hpp  main.cpp  old_main.cpp  pyhpgcc.cpp  rmat_gen.cpp
src/algorithms/: catalyurek.cpp  catalyurek.hpp  check_coloring.cpp  check_coloring.hpp  get_color_stats.cpp  get_color_stats.hpp  greedy-lu.cpp  greedy-lu.hpp  greedy.cpp  greedy.hpp  order_graph.cpp  rokos.cpp  rokos.hpp  sched-rev.cpp  sched-rev.hpp  shuffle.cpp  shuffle.hpp
src/io/: io.cpp  io.hpp
